# sentinel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  instructions.md  pyproject.toml
docs/: configuration.md  how-it-works.md  intelligence-layer.md
src/: config.py
src/api/: app.py  routes.py
src/collector/: loki.py  prometheus.py
src/detector/: anomaly.py  log_spikes.py
src/schema/: models.py
src/scorer/: health.py
src/storage/: db.py
tests/e2e/: test_detect_and_score.py
tests/fixtures/loki/: query_range_error.json  query_range_success.json
tests/fixtures/prometheus/: query_range_error.json  query_range_success.json
tests/unit/api/: test_routes.py
tests/unit/collector/: test_loki.py  test_prometheus.py
tests/unit/detector/: conftest.py  test_anomaly.py  test_log_spikes.py
tests/unit/schema/: test_models.py
tests/unit/scorer/: test_health.py
tests/unit/storage/: test_db.py
