[project]
name = "sentinel"
version = "0.1.0"
description = "AIOps observability POC: Prometheus + Loki anomaly detection for a single microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
